tests/invalid/unsatisfiable_constraint.err_exp
unsatisfiable_constraint.m:038: In predicate `unsatisfiable_constraint.test/1':
unsatisfiable_constraint.m:038:   type error: unsatisfied typeclass constraints:
unsatisfiable_constraint.m:038:       `unsatisfiable_constraint.a(A, B, A, V_8)'
unsatisfiable_constraint.m:038:       `unsatisfiable_constraint.a(A, B, C, V_14)'
unsatisfiable_constraint.m:038:       `unsatisfiable_constraint.b(A, C)'
unsatisfiable_constraint.m:038: In predicate `unsatisfiable_constraint.test/1':
unsatisfiable_constraint.m:038:   warning: unresolved polymorphism.
unsatisfiable_constraint.m:038:   The variables with unbound types were:
unsatisfiable_constraint.m:038:       C: C
unsatisfiable_constraint.m:038:       B: A
unsatisfiable_constraint.m:038:   The unbound type variable(s) will be implicitly
unsatisfiable_constraint.m:038:   bound to the builtin type `void'.
